<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="Delete"
        android:summary="@string/prefs_delete_summary"
        android:title="@string/prefs_delete" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="Abort"
        android:summary="@string/prefs_abort_summary"
        android:title="@string/prefs_abort" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="Plugged"
        android:summary="@string/prefs_plugged_summary"
        android:title="@string/prefs_plugged" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="Quiet"
        android:summary="@string/prefs_quiet_summary"
        android:title="@string/prefs_quiet" />

    <com.Odroid.ObackupCore.OBackupCoreBasepath
        android:defaultValue="/IGNORED/"
        android:key="BasePath"
        android:summary="@string/prefs_base_summary"
        android:title="@string/prefs_base" />

</PreferenceScreen>