<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/backup_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="backup_now"
                android:text="@string/backup_now" />

            <Button
                android:id="@+id/backup_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="backup_stop"
                android:text="@string/backup_stop" />
        </LinearLayout>

        <TextView
            android:id="@+id/backup_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <LinearLayout
            android:id="@+id/backup_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/backup_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/backup_progressfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/backup_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backup_server"
            android:text="@string/backup_server" />

        <Button
            android:id="@+id/backup_scheduling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="backup_scheduling"
            android:text="@string/backup_scheduling" />

        <Button
            android:id="@+id/backup_exclude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backup_exclude"
            android:text="@string/backup_exclude" />

        <Button
            android:id="@+id/backup_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backup_settings"
            android:text="@string/backup_settings" />

        <TextView
            android:id="@+id/scheduled_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:editable="false"
            android:text="@string/backup_doc" />
    </LinearLayout>

</ScrollView>